# keccak-asm

./: .gitmodules  CHANGELOG.md  Cargo.toml  README.md  a.s  build.rs  cliff.toml  release.toml  rustfmt.toml
.github/workflows/: ci.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: tiny_keccak_differential.rs
sha3-asm/: CHANGELOG.md  Cargo.toml  README.md  build.rs
sha3-asm/src/: keccak1600-x86_64.s  lib.rs
src/: keccak1600-armv4.s  keccak1600-armv8.s  keccak1600-x86.s  keccak1600-x86_64-avx2.s  keccak1600-x86_64-avx512f.s  keccak1600-x86_64-avx512vl.s  lib.rs  macros.rs  sha3.c  sha3.h  state.rs  state_c.rs
tests/: test.rs
