[package]
name = "keccak-asm"
version = "0.1.0"
edition = "2021"
exclude = [".gitmodules", "cryptogams", "tests"]

[workspace]
members = [".", "sha3-asm"]

[dependencies]
digest = { version = "0.10", default-features = false }
sha3-asm = { version = "0.1.0", path = "sha3-asm" }
zeroize = { version = "1.6.0", default-features = false, optional = true }

[dev-dependencies]
digest = { version = "0.10", features = ["dev"] }
hex = "0.4"

[features]
default = ["std"]
std = ["digest/std"]

# asm = ["keccak/asm"] # Enable ASM (currently ARMv8 only). WARNING: Bumps MSRV to 1.59
oid = ["digest/oid"] # Enable OID support. WARNING: Bumps MSRV to 1.57
zeroize = ["dep:zeroize"] # Enable zeroize support. WARNING: Bumps MSRV to 1.56
