[package]
name = "keccak-asm-fuzz"
version = "0.1.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tiny-keccak = { version = "2.0", features = ["keccak"] }

[dependencies.keccak-asm]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "tiny_keccak_differential"
path = "fuzz_targets/tiny_keccak_differential.rs"
test = false
doc = false
